# valor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  package-lock.json  package.json
docs/: alerts.md  (+16 more)
evolver/: .env.example  README.md  pyproject.toml
evolver/docs/: roadmap-vol-premium.md  scope-gate-calibration.md  step0-free-data-pretest.md
evolver/evolver/: __init__.py  api.py  config.py  loop.py  safety.py
evolver/evolver/agents/: analyst.py  critic.py  prompts.py
evolver/evolver/bus/: redis_stream.py
evolver/evolver/core/: __init__.py  calibration.py  kpis.py  pair_signal.py  risk.py  signal.py  sim.py
evolver/evolver/dashboard/: app.py
evolver/scripts/: backfill_signals.py  backtest.py  coinalyze_probe.py  cross_venue_intraday_oos.py  cross_venue_oos.py  crypto_shadow.py  data_feed_check.py  deribit_flow_probe.py  deribit_probe.py  edge_verify.py  ensemble_test.py  evolve_cross_sectional.py  evolve_liquidation.py  evolve_onchain.py  evolve_prompt.py  evolve_search.py  evolve_trend.py  evolve_xs_smallcap.py  first_cycle.py  funding_carry_thesis_test.py  funding_oos.py  funding_thesis_test.py  funding_universe.py  funding_universe_intraday.py  fx_shadow.py  hybrid_funding_oos.py  intraday_reversion_thesis_test.py  liq_daily_thesis_test.py  liquidation_ensemble.py  liquidation_print_thesis_test.py  liquidation_walkforward.py  noise_gate_test.py  oi_thesis_test.py  oos_search.py  options_pin_thesis_test.py  pin_pretest.py  replay.py  research_tick.py  shadow_analyst.py  shadow_runner.py  (+4 more)
evolver/tests/: test_coinalyze.py  test_core.py  test_cycle_guards.py  test_learning_loops.py  test_oi_deep.py  test_pair_signal.py  test_stats.py  test_vol_pnl.py
(+235 files in other folders)
